<resources>
    <string name="app_name">AJE</string>
    <string name="description_text">CHOISISSEZ CLIENT OU SERVEUR</string>
    <string name="serveur_text">SERVEUR</string>
    <string name="client_text">CLIENT</string>
    <string name="device_text">LISTE DES DEVICES</string>
    <string name="device_text_2">SCAN DES DEVICES</string>
    <string name="device_text_3">REGARDER VIDEO</string>

    <string name="download_video">Download Video</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="chooseVideo">Make Video Available</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
</resources>
