<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="344dp"
    android:layout_height="495dp"
    tools:context="phcar.aje.MainActivity"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_text" />

    <Button
        android:id="@+id/serveur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serveur_text" />

    <Button
        android:id="@+id/client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_text" />
</LinearLayout>
