<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/clientScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_text_2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/clientB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="list"
        android:text="@string/device_text"
        android:layout_below="@+id/clientScan"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/readVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="list"
        android:text="@string/device_text_3"
        android:layout_below="@+id/clientB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewClient"
        android:layout_below="@+id/clientB"
        android:layout_alignParentStart="true"
        android:layout_marginTop="98dp" />

</RelativeLayout>